--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Helvetica Neue", sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
   text-align: center;
